[gd_scene load_steps=11 format=3 uid="uid://dxh38ib8dttaw"]

[ext_resource type="Script" path="res://Scenes/ServiceContent/service_content.gd" id="1_jtnuu"]
[ext_resource type="StyleBox" uid="uid://d18wftlymhpid" path="res://Styles/ButtonPressedRed/button_pressed_red.tres" id="2_3kdk4"]

[sub_resource type="InputEventAction" id="InputEventAction_wyy5o"]
action = &"ui_edit"

[sub_resource type="Shortcut" id="Shortcut_w1600"]
events = [SubResource("InputEventAction_wyy5o")]

[sub_resource type="InputEventAction" id="InputEventAction_oul7u"]
action = &"ui_text_delete"

[sub_resource type="Shortcut" id="Shortcut_au4lo"]
events = [SubResource("InputEventAction_oul7u")]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gl7bl"]
content_margin_left = 3.0
content_margin_top = 3.0
content_margin_right = 1.0
content_margin_bottom = 2.0
bg_color = Color(0, 0.721569, 0.317647, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Animation" id="Animation_6maia"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_jnpuk"]
resource_name = "fadeout_animation"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2vofd"]
_data = {
"RESET": SubResource("Animation_6maia"),
"fadeout_animation": SubResource("Animation_jnpuk")
}

[node name="ServiceContent" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 217.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jtnuu")

[node name="Background" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0.784314)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="Header" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -44.5
offset_top = 20.0
offset_right = 46.5
offset_bottom = 62.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "Simple Password Manager"
flat = true

[node name="EditService" type="Button" parent="Header"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 43.5
offset_top = -12.0
offset_right = 68.5
offset_bottom = 13.0
grow_horizontal = 0
grow_vertical = 2
tooltip_text = "Edit service"
theme_override_font_sizes/font_size = 12
disabled = true
shortcut = SubResource("Shortcut_w1600")
text = "‚úèÔ∏è "
text_overrun_behavior = 1

[node name="DeleteService" type="Button" parent="Header"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 76.5
offset_top = -12.0
offset_right = 101.5
offset_bottom = 13.0
grow_horizontal = 0
grow_vertical = 2
tooltip_text = "Delete service"
theme_override_font_sizes/font_size = 12
shortcut = SubResource("Shortcut_au4lo")
text = "üóëÔ∏è "
text_overrun_behavior = 1

[node name="OpenWeb" type="Button" parent="Header"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 9.5
offset_top = -12.0
offset_right = 34.5
offset_bottom = 13.0
grow_horizontal = 2
tooltip_text = "Add service web link"
theme_override_font_sizes/font_size = 12
theme_override_styles/pressed = SubResource("StyleBoxFlat_gl7bl")
toggle_mode = true
text = "üåç "
text_overrun_behavior = 1

[node name="WebAddress" type="LineEdit" parent="Header"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -157.0
offset_top = 50.0
offset_right = 157.0
offset_bottom = 92.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Input web adress"
alignment = 1
max_length = 30
expand_to_text_length = true
virtual_keyboard_type = 7

[node name="ButtonAccept" type="Button" parent="Header/WebAddress"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 0.5
offset_right = 20.5
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 8
text = "‚ùå"
text_overrun_behavior = 1

[node name="ButtonDiscard" type="Button" parent="Header/WebAddress"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 0.5
offset_top = -21.0
offset_right = 20.5
offset_bottom = -1.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 8
text = "‚úîÔ∏è "
text_overrun_behavior = 1

[node name="Label" type="Label" parent="Header"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -312.0
offset_right = 309.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Simple Password Manager"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HideDescription" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 130.0
offset_top = 76.0
offset_right = 155.0
offset_bottom = 101.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 12
theme_override_styles/pressed = ExtResource("2_3kdk4")
toggle_mode = true
text = "üëÅÔ∏è "
text_overrun_behavior = 1

[node name="DescriptionHeader" type="Label" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 73.0
offset_right = 121.0
offset_bottom = 104.0
theme_override_font_sizes/font_size = 20
text = "Description"

[node name="Description" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.989
offset_left = 10.0
offset_top = 114.0
offset_right = 0.284973
offset_bottom = 145.0
text = "Choose or create a service on the left tab to get started"
placeholder_text = "Enter description here"

[node name="HidePasswords" type="Button" parent="."]
layout_mode = 0
offset_left = 123.0
offset_top = 155.0
offset_right = 148.0
offset_bottom = 180.0
theme_override_font_sizes/font_size = 12
theme_override_styles/pressed = ExtResource("2_3kdk4")
toggle_mode = true
text = "üëÅÔ∏è "
text_overrun_behavior = 1

[node name="PasswordsHeader" type="Label" parent="."]
layout_mode = 0
offset_left = 11.0
offset_top = 151.0
offset_right = 114.0
offset_bottom = 182.0
theme_override_font_sizes/font_size = 20
text = "Passwords"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 190.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 2
vertical_scroll_mode = 2

[node name="PasswordContent" type="Control" parent="ScrollContainer"]
custom_minimum_size = Vector2(0, 459)
layout_mode = 2
mouse_filter = 2

[node name="NewPassword" type="Button" parent="ScrollContainer/PasswordContent"]
layout_mode = 2
offset_left = 10.0
offset_right = 191.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 30
text = "+"

[node name="NativeConfirmationDialog" type="NativeConfirmationDialog" parent="."]

[node name="SavePopup" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -131.0
offset_top = -33.0
grow_horizontal = 0
grow_vertical = 0

[node name="Label" type="Label" parent="SavePopup"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.982
anchor_bottom = 0.96
offset_left = 4.0
offset_top = 4.0
offset_right = -0.0940094
text = "Service saved..."

[node name="AnimationPlayer" type="AnimationPlayer" parent="SavePopup"]
libraries = {
"": SubResource("AnimationLibrary_2vofd")
}

[connection signal="pressed" from="Header" to="." method="_on_header_pressed"]
[connection signal="resized" from="Header" to="." method="_on_header_resized"]
[connection signal="pressed" from="Header/EditService" to="." method="_on_edit_service_pressed"]
[connection signal="pressed" from="Header/DeleteService" to="." method="_on_delete_service_pressed"]
[connection signal="pressed" from="Header/OpenWeb" to="." method="_on_open_web_pressed"]
[connection signal="text_changed" from="Header/WebAddress" to="." method="_on_web_address_text_changed"]
[connection signal="text_submitted" from="Header/WebAddress" to="." method="_on_web_address_text_submitted"]
[connection signal="pressed" from="Header/WebAddress/ButtonAccept" to="." method="_on_button_accept_pressed"]
[connection signal="pressed" from="Header/WebAddress/ButtonDiscard" to="." method="_on_button_discard_pressed"]
[connection signal="pressed" from="HideDescription" to="." method="_on_hide_description_pressed"]
[connection signal="pressed" from="HidePasswords" to="." method="_on_hide_passwords_pressed"]
[connection signal="pressed" from="ScrollContainer/PasswordContent/NewPassword" to="." method="_on_new_password_pressed"]
[connection signal="confirmed" from="NativeConfirmationDialog" to="." method="_on_native_confirmation_dialog_confirmed"]
